@@ -1,6 +1,9 @@
 2011.06.26 - version 2.5.2
 	* new: custom sidebars can now be set to appear on just the homepage
 	* new: sb_register_sidebar helper function for easily registering new sidebar within theme/plugin
+	* new: sb_unregister_sidebar helper function for easily unregistering a default sidebar within theme/plugin
+	* changed: added check for is_post_type_archive() to the sb_page_title hook
+	* changed: improved URL scheme for admin links in footer
 	
 2011.06.24 - version 2.5.1
 	* new: added sb_before/after_{sidebar}_aside to appear outside of opening/closing div for given sidebar
